# TLSAbstractionLayer

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  Makefile  client.cpp  client_hsm.cpp  dtls_client.cpp  dtls_server.cpp  server.cpp  server_hsm.cpp  setupEnv.sh
examples/ca/: index.txt  index.txt.old  openssl.cnf
examples/ca/certs/: ca.cert.pem
examples/ca/newcerts/: 1000.pem
examples/ca/private/: ca.key.pem
examples/certificates/: ca.cert.der  client.cert.der  client.cert.ecdsa.der
examples/openssl_examples/: CMakeLists.txt  README.md  client.cpp  client_hsm.cpp  dtls_client.cpp  dtls_server.cpp  server.cpp  server_hsm.cpp
examples/wolfssl_examples/: CMakeLists.txt  README.md  client.cpp  server.cpp
include/TLSAbstractionLayer/: OpenSSLSecureEndPoint.hpp  SecureEndPoint.hpp  WolfSSLSecureEndPoint.hpp  opensslCipherSuites.hpp  opensslConfig.hpp  secureEndPointConfig.hpp  wolfsslCipherSuites.hpp  wolfsslConfig.hpp
include/wolfssl/: options.h  test.h
libs/openssl/: libssl.so.1.1
libs/softwareHSM/: install.sh  libbotan-1.10.so.1  libsqlite3.so.0  openssl.cnf  softhsm  softhsm-keyconv  softhsm.conf
libs/softwareHSM/keys_example/: client_pkcs8.key  server_pkcs8.key
libs/wolfssl/: libwolfssl.so.19
src/OpenSSLSecureEndPoint/: OpenSSLSecureEndPoint.cpp
src/SecureEndPoint/: SecureEndPoint.cpp
src/SecureEndpoint/: SecureEndPoint.cpp
src/WolfSSLSecureEndPoint/: WolfSSLSecureEndPoint.cpp
